@@ -8,27 +8,26 @@ OPTIONS
 
 -annotationsDir:                Path of the annotations directory
 
--annotationMode:                Selection of the type of annotation lines produced by AnnotSV
+-annotationMode:                Description of the types of lines produced by AnnotSV
                                 Values: both (default), full or split
 
 -bcftools:                      Path of the bcftools local installation
 
 -bedtools:                      Path of the bedtools local installation
 
--candidateGenesFile:            Path of a file containing the candidate genes of the user (gene names can be space-separated, tabulation-separated, or line-break-separated) (optional)
+-benignAF:                      Allele frequency threshold to select the benign SV in the data sources
+                                Range values: [0.001-0.1], default = 0.01	
+
+-candidateGenesFile:            Path of a file containing the candidate genes of the user (gene names can be space-separated, tabulation-separated, or line-break-separated)
 
 -candidateGenesFiltering:       To select only the SV annotations ("split" and "full") overlapping a gene from the "candidateGenesFile"
-                                Values: no (default) or yes
+                                Values: 0 (default) or 1
 
 -candidateSnvIndelFiles:        Path of the filtered VCF input file(s) with SNV/indel coordinates for compound heterozygotes report (optional)
                                 Gzipped VCF files are supported as well as regular expression
 
--candidateSnvIndelsamples:      To specifiy the sample names from the VCF files defined from the -filtereVCFfiles option 
+-candidateSnvIndelSamples:      To specifiy the sample names from the VCF files defined from the -candidateSnvIndelFiles option
                                 Default: use all samples from the filtered VCF files
-
--externalGeneFiles:             Path of tab separated values file(s) to integrate external gene annotations into the output file. 
-                                The first line should be a header including a column entitled "genes".
-                                Gzipped files are supported
 
 -genomeBuild:                   Genome build used
                                 Values: GRCh37 (default) or GRCh38 or mm9 or mm10
@@ -36,11 +35,11 @@ OPTIONS
 -help:                          More information on the arguments
 
 -hpo:                           HPO terms list describing the phenotype of the individual being investigated
-                                Values: use comma, semicolon or space separated class values, default = ""
-                                (e.g.: "HP:0001156,HP:0001363,HP:0011304")
+                                Values: use comma, semicolon or space separated class values
+                                Default = "" (e.g.: "HP:0001156,HP:0001363,HP:0011304")
 
 -includeCI:                     To expand the "start" and "end" SV positions with the VCF confidence intervals (CIPOS, CIEND) around the breakpoints
-                                Values: yes (default) or no
+                                Values: 1 (default) or 0
 
 -metrics:                       Changing numerical values from frequencies to us or fr metrics (e.g. 0.2 or 0,2)
                                 Values: us (default) or fr
@@ -52,43 +51,49 @@ OPTIONS
 
 -outputFile:                    Output path and file name 
 
--overlap:                       Minimum overlap (%) between the user features and the annotated SV to be reported
+-overlap:                       Minimum overlap (%) between user features (User BED) and the annotated SV to be reported
                                 Range values: [0-100], default = 100
 
 -overwrite:                     To overwrite existing output results
-                                Values: yes (default) or no
+                                Values: 1 (default) or 0
 
 -promoterSize:                  Number of bases upstream from the transcription start site
                                 Default = 500
 
--rankFiltering                  To select the SV of an user-defined specific class (from 1 to 5)
-                                Values: use comma separated class values, or use a dash to denote a range of values, default = "1-5"
-                                ( e.g.: "3,4,5" or "3-5")
+-rankFiltering:                 To select the SV of a user-defined specific class (from 1 to 5)
+                                Values: use comma separated class values, or use a dash to denote a range of values
+                                (e.g.: "3,4,5" or "3-5"), default = "1-5"
 
 -reciprocal:                    Use of a reciprocal overlap between SV and user features (only for annotations with features overlapping the SV)
-                                Values: no (default) or yes
+                                Values: 0 (default) or 1
 
--REreport:                      Create a report to link the annotated SV and the overlapped regulatory elements (coordinates and sources)
-                                Values: no (default) or yes
+- REreport:                     Create a report to link the annotated SV and the overlapped regulatory elements (coordinates and sources)
+                                Values: 0 (default) or 1
+
+-REselect1:                     To report only the morbid, HI, TS, candidate and phenotype matched genes 
+                                Values: 1 (default) or 0
+	
+-REselect2:                     To report only the genes not present in "Gene_name"
+                                Values: 1 (default) or 0
 
 -samplesidBEDcol:               Number of the column reporting the samples ID for which the SV was called (if the input SV file is a BED)
-                                Range values: [4-[, default = -1 (value not given)
-                                (Samples ID should be comma or space separated)
+                               	Range values: [4-[, default = -1 (value not given)
+                                (Samples ID should be comma or space separated) 
 
--snvIndelFiles:                 Path of the VCF input file(s) with SNV/indel coordinates used for false positive discovery
+-snvIndelFiles:	                Path of the VCF input file(s) with SNV/indel coordinates used for false positive discovery
                                 Use counts of the homozygous and heterozygous variants
                                 Gzipped VCF files are supported as well as regular expression
 
 -snvIndelPASS:                  Boolean. To only use variants from VCF input files that passed all filters during the calling (FILTER column value equal to PASS)
                                 Values: 0 (default) or 1
 
--snvIndelSamples:               To specifiy the sample names from the VCF files defined from the -vcfFiles option
+-snvIndelSamples:               To specify the sample names from the VCF files defined from the -snvIndelFiles option
                                 Default: use all samples from the VCF files
 
 -SVinputFile:                   Path of the input file (VCF or BED) with SV coordinates
-                                Gzipped VCF file is supported 
+                                Gzipped VCF file is supported
 
--SVinputInfo:                   To extract the additional SV input fields and insert the data in the output file
+-SVinputInfo:                   To extract the additional SV input fields and insert the data in the outputfile
                                 Values: 1 (default) or 0
 
 -SVminSize:                     SV minimum size (in bp)
@@ -100,6 +105,5 @@ OPTIONS
 -tx:                            Origin of the transcripts (RefSeq or ENSEMBL)
                                 Values: RefSeq (default) or ENSEMBL
 
--txFile:                        Path of a file containing a list of preferred genes transcripts to be used in priority during the annotation
-                                (Preferred genes transcripts names should be tab or space separated)
+-txFile:                        Path of a file containing a list of preferred genes transcripts to be used in priority during the annotation (Preferred genes transcripts names should be tab or space separated)
 
